# screen-agent-mvp

./: .gitignore  README.md  pyproject.toml
docs/: architecture.html  model-setup.md  roadmap.md
livepeer/: capability.json  docker-compose.onchain.yml  docker-compose.yml  runners.json
scripts/: bootstrap_wsl.sh  livepeer_client.py  omniparser_json.py  run_strict_smoke.sh
src/screen_agent_mvp/: __init__.py  analyzer.py  cli.py  config.py  demo.py  engines.py  livepeer_runner.py  qa.py  reporting.py  schema.py  video.py  web.py
tests/: test_analyzer_smoke.py  test_livepeer_runner.py  test_qa.py  test_reporting.py  test_video_sampling.py  test_web.py
