[project]
name = "screen-agent-mvp"
version = "0.1.0"
description = "Local screen recording agent MVP for bug-report evidence on an RTX 5090"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "gradio>=5.0,<7",
    "numpy>=1.26,<3",
    "opencv-python-headless>=4.10,<5",
    "pillow>=10,<13",
    "rich>=13,<15",
    "typer>=0.12,<1",
]

[project.scripts]
screen-agent = "screen_agent_mvp.cli:app"
screen-agent-web = "screen_agent_mvp.web:main"
screen-agent-runner = "screen_agent_mvp.livepeer_runner:main"

[dependency-groups]
dev = [
    "pytest>=8,<10",
    "pytest-aiohttp>=1.0,<2",
    "ruff>=0.11,<1",
]
livepeer = [
    "aiohttp>=3.10,<4",
    "livepeer-gateway",
]
models = [
    "accelerate>=1.0,<2",
    "easyocr>=1.7,<2",
    "einops==0.8.0",
    "matplotlib>=3.9,<4",
    "openai>=1.3,<3",
    "paddleocr>=3.0,<4",
    "paddlepaddle>=3.0,<4",
    "qwen-vl-utils>=0.0.10,<1",
    "safetensors>=0.4,<1",
    "supervision==0.18.0",
    "timm>=1.0,<2",
    "torch>=2.8",
    "torchvision>=0.23",
    "transformers>=4.50,<5",
    "ultralytics==8.3.70",
]

# livepeer-gateway is not on PyPI yet; pull it from the branch (same as app-examples).
[tool.uv.sources]
livepeer-gateway = { git = "https://github.com/livepeer/livepeer-python-gateway", branch = "ja/live-runner" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/screen_agent_mvp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
